<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="false"
              android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Create Scramble"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Phrase"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="clue"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etClue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="View Scramble"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bViewS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="View Scramble"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/bRescramble"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"

            android:layout_weight="1"
            android:text="Rescramble"
            android:textSize="14sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/scramble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_weight="1"
            android:text="Clear"
            android:textSize="14sp"/>


        <Button
            android:id="@+id/bAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_weight="1"
            android:text="Accept"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bChooseS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Choose Scramble"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/bViewSStat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="View Scrambles"
            android:textSize="14sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_back_to_account_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="Goto AccountView"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/bLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textSize="14sp"/>

    </LinearLayout>


</LinearLayout>
