<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height = "match_parent"
    android:layout_width = "match_parent"
    android:baselineAligned="false"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Just do it"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text=" Scramble:"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/tvScramble"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text=""
        android:textSize="14sp" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text=" Clue:"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tvClue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textSize="14sp" />
    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Type Answer"
        android:layout_marginTop="5dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id = "@+id/bExit"
            android:text = "Exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:textSize="14sp" />

        <Button
            android:id = "@+id/bSubmit"
            android:text = "Submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id = "@+id/bCreateS"
            android:text = "Create Scramble"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <Button
            android:id = "@+id/bChooseS"
            android:text = "Choose Scramble"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id = "@+id/bViewPStat"
            android:text = "View Player Stat"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <Button
            android:id = "@+id/bViewSStat"
            android:text = "View Scramble Stat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id = "@+id/bLogout"
            android:text = "@string/logout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp" />
        <Button
            android:id = "@+id/bBack"
            android:text = "Back AccountView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp" />

    </LinearLayout>





</LinearLayout>

